--- a/terminator/.config/terminator/config
+++ b/terminator/.config/terminator/config
@@ -19,6 +19,8 @@
     font = Consolas 10
     foreground_color = "#f7f7f7"
     palette = "#000000:#c75646:#83b33b:#d0b03c:#72b3cc:#c8a0d1:#218693:#b0b0b0:#5d5d5d:#e09690:#cdee69:#ffe377:#9cd9f0:#fbb1f9:#77dfd8:#f7f7f7"
+    scroll_on_output = False
+    scrollback_lines = 99999
     show_titlebar = False
     use_custom_command = True
     use_system_font = False
