Remove unnecessary flag on stow

--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -7,5 +7,5 @@
 - name: Symlink my dotfiles
   shell: |
     for dir in $HOME/dotfiles/files/*; do
-      stow -R --dir=$HOME/dotfiles/files/ --target=$HOME $(basename $dir)
+      stow --dir=$HOME/dotfiles/files/ --target=$HOME $(basename $dir)
     done
