--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -15,10 +15,16 @@
   with_items:
     - fish
     - chromium-browser
+    - deluge-gtk
     - smplayer
     - git
     - gitg
     - mpv
     - docker-engine
+    - docker-compose
     - unp
+    - openjdk-7-source
+    - openjdk-8-source
+    - openjdk-7-jdk
+    - openjdk-8-jdk
   become: yes
