--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -29,3 +29,13 @@
     - openjdk-8-source
     - openjdk-8-jdk
   become: yes
+
+- name: Get atom
+  get_url:
+    url: https://atom.io/download/deb
+    dest: /tmp/atom.deb
+
+- name: Install atom
+  apt:
+    deb: /tmp/atom.deb
+  become: yes
