--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,7 @@
 - hosts: localhost
   connection: local
+  vars:
+    ansible_python_interpreter: "/usr/bin/env python"
   roles:
     - common
     - dotfiles
