--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,6 +7,7 @@
     - "ppa:rvm/smplayer"
     - "ppa:webupd8team/atom"
     - "deb https://apt.dockerproject.org/repo ubuntu-{{ ansible_distribution_release }} main"
+  when: ansible_pkg_mgr == 'apt'
   become: yes
 
 - name: Common packages
@@ -31,4 +32,5 @@
     # - openjdk-7-jdk
     - openjdk-8-source
     - openjdk-8-jdk
+  when: ansible_pkg_mgr == 'apt'
   become: yes
