--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -36,6 +36,15 @@
   become: yes
 
 - name: Common packages (Mac)
+  homebrew:
+    name: "{{ item }}"
+    state: present
+  when: ansible_os_family == 'Darwin'
+  with_items:
+    - fish
+    - unp
+
+- name: Common packages (Mac)
   homebrew_cask:
     name: "{{ item }}"
     state: present
@@ -43,3 +52,4 @@
   with_items:
     - java
     - atom
+    - docker
