Add more apps for mac

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -51,8 +51,10 @@
   when: ansible_os_family == 'Darwin'
   with_items:
     - java
+    - android-file-transfer
     - atom
     - docker
     - firefox
     - google-chrome
     - slack
+    - vlc
