--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+# Mac
+.DS_Store
+
 # Python virtualenv
 venv/
 
 # Application data files
 files/maven/.m2/repository/
+files/maven/.m2/wrapper/
 
 # Ansible
 *.retry
