feat: install extra packages for brew

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -58,9 +58,11 @@
     - android-file-transfer
     - atom
     - docker
+    - eclipse-java
     - firefox
     - fork
     - google-chrome
     - java8
     - slack
     - vlc
+    - visual-studio-code-insiders
