feat: avoid outdated `eclipse-java` on macos

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -59,7 +59,8 @@
     - android-file-transfer
     - atom
     - docker
-    - eclipse-java
+    # Really outdated
+    # - eclipse-java
     - firefox
     - fork
     - google-chrome
