feat: install `npm` and `yarn` on mac

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -45,9 +45,11 @@
     - httpie
     - jq
     - nano
+    - node
     - terraform
     - the_silver_searcher
     - unp
+    - yarn
     - youtube-dl
     - libav
 
