--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -12,80 +12,78 @@
 
 - name: Common packages
   apt:
-    name: "{{ item }}"
+    name:
+      - atom
+      - fish
+      - chromium-browser
+      - deluge-gtk
+      - smplayer
+      - git
+      - p7zip
+      - gitg
+      - mpv
+      - docker-engine
+      - docker-compose
+      - unp
+      # FIXME: missing tzdata package
+      # - openjdk-7-source
+      # - openjdk-7-jdk
+      - openjdk-8-source
+      - openjdk-8-jdk
     state: present
-  with_items:
-    - atom
-    - fish
-    - chromium-browser
-    - deluge-gtk
-    - smplayer
-    - git
-    - p7zip
-    - gitg
-    - mpv
-    - docker-engine
-    - docker-compose
-    - unp
-    # FIXME: missing tzdata package
-    # - openjdk-7-source
-    # - openjdk-7-jdk
-    - openjdk-8-source
-    - openjdk-8-jdk
   when: ansible_pkg_mgr == 'apt'
   become: yes
 
 - name: Common packages (Mac)
   homebrew:
-    name: "{{ item }}"
+    name:
+      - fish
+      - httpie
+      - jq
+      - nano
+      - node
+      - terraform
+      - the_silver_searcher
+      - unp
+      - yarn
+      - youtube-dl
+      - libav
     state: present
   when: ansible_os_family == 'Darwin'
-  with_items:
-    - fish
-    - httpie
-    - jq
-    - nano
-    - node
-    - terraform
-    - the_silver_searcher
-    - unp
-    - yarn
-    - youtube-dl
-    - libav
 
 - name: Common packages (Mac)
   homebrew_cask:
-    name: "{{ item }}"
+    name:
+      - adoptopenjdk8
+      - android-file-transfer
+      - docker
+      - firefox
+      - font-anonymouspro-nerd-font-mono
+      - font-aurulentsansmono-nerd-font-mono
+      - font-dejavusansmono-nerd-font-mono
+      - font-droidsansmono-nerd-font-mono
+      - font-fira-mono
+      - font-hack-nerd-font-mono
+      - font-inconsolata-nerd-font-mono
+      - font-input
+      - font-merriweather
+      - font-merriweather-sans
+      - font-monoid-nerd-font-mono
+      - font-mononoki-nerd-font-mono
+      - font-robotomono-nerd-font-mono
+      - font-sourcecodepro-nerd-font-mono
+      - fork
+      - gimp
+      - google-chrome
+      - intellij-idea-ce
+      - microsoft-teams
+      - postman
+      - skype-for-business
+      - slack
+      - visual-studio-code-insiders
+      - vlc
+      - vox
+      - vox-preferences-pane
     state: present
   when: ansible_os_family == 'Darwin'
-  with_items:
-    - adoptopenjdk8
-    - android-file-transfer
-    - docker
-    - firefox
-    - font-anonymouspro-nerd-font-mono
-    - font-aurulentsansmono-nerd-font-mono
-    - font-dejavusansmono-nerd-font-mono
-    - font-droidsansmono-nerd-font-mono
-    - font-fira-mono
-    - font-hack-nerd-font-mono
-    - font-inconsolata-nerd-font-mono
-    - font-input
-    - font-merriweather
-    - font-merriweather-sans
-    - font-monoid-nerd-font-mono
-    - font-mononoki-nerd-font-mono
-    - font-robotomono-nerd-font-mono
-    - font-sourcecodepro-nerd-font-mono
-    - fork
-    - gimp
-    - google-chrome
-    - intellij-idea-ce
-    - microsoft-teams
-    - postman
-    - skype-for-business
-    - slack
-    - visual-studio-code-insiders
-    - vlc
-    - vox
-    - vox-preferences-pane
+
