--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,38 +1,5 @@
-- name: PPA repositories
-  apt_repository:
-    repo: "{{ item }}"
-    state: present
-  with_items:
-    - "ppa:no1wantdthisname/ppa"
-    - "ppa:rvm/smplayer"
-    - "ppa:webupd8team/atom"
-    - "deb https://apt.dockerproject.org/repo ubuntu-{{ ansible_distribution_release }} main"
-  when: ansible_pkg_mgr == 'apt'
-  become: yes
-
-- name: Common packages
-  apt:
-    name:
-      - atom
-      - fish
-      - chromium-browser
-      - deluge-gtk
-      - smplayer
-      - git
-      - p7zip
-      - gitg
-      - mpv
-      - docker-engine
-      - docker-compose
-      - unp
-      # FIXME: missing tzdata package
-      # - openjdk-7-source
-      # - openjdk-7-jdk
-      - openjdk-8-source
-      - openjdk-8-jdk
-    state: present
-  when: ansible_pkg_mgr == 'apt'
-  become: yes
+- import_tasks: setup-Debian.yml
+  when: ansible_os_family == 'Debian'
 
 - name: Common packages (Mac)
   homebrew:
@@ -87,4 +54,3 @@
       - vscodium
     state: present
   when: ansible_os_family == 'Darwin'
-
