--- a/roles/common/tasks/setup-Debian.yml
+++ b/roles/common/tasks/setup-Debian.yml
@@ -14,6 +14,7 @@
     - "ppa:no1wantdthisname/ppa"
     - "ppa:rvm/smplayer"
     - "ppa:webupd8team/atom"
+    - "ppa:fish-shell/release-3"
     - "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
   become: yes
 
