--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,5 +1,1 @@
-- import_tasks: setup-Debian.yml
-  when: ansible_os_family == 'Debian'
-
-- import_tasks: setup-Darwin.yml
-  when: ansible_os_family == 'Darwin'
+- include_tasks: "setup-{{ ansible_os_family }}.yml"
