feat: prefer `tfswitch` instead of `terraform`

--- a/roles/common/tasks/setup-Darwin.yml
+++ b/roles/common/tasks/setup-Darwin.yml
@@ -14,7 +14,7 @@
       - jq
       - nano
       - node
-      - terraform
+      - tfswitch
       - the_silver_searcher
       - unp
       - yarn
