feat: use new docker package name

--- a/roles/common/tasks/setup-Debian.yml
+++ b/roles/common/tasks/setup-Debian.yml
@@ -31,7 +31,7 @@
       - gitg
       - mpv
       - terminator
-      - docker-engine
+      - docker-ce
       - docker-compose
       - unp
       # FIXME: missing tzdata package
