--- a/site.yml
+++ b/site.yml
@@ -1,7 +1,7 @@
 - hosts: localhost
   connection: local
   vars:
-    ansible_python_interpreter: "/usr/bin/env python"
+    ansible_python_interpreter: "/usr/bin/env python3"
   roles:
     - common
     - dotfiles
