--- a/roles/dotfiles/tasks/main.yml
+++ b/roles/dotfiles/tasks/main.yml
@@ -1,15 +1,4 @@
-- name: Stow
-  apt:
-    name: stow
-    state: present
-  when: ansible_pkg_mgr == 'apt'
-  become: yes
-
-- name: Stow (Mac)
-  homebrew:
-    name: stow
-    state: present
-  when: ansible_os_family == 'Darwin'
+- include_tasks: "setup-{{ ansible_os_family }}.yml"
 
 - name: Symlink my dotfiles
   shell: |
