feat: add role to handle `aur` packages

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "roles/geerlingguy.nodejs"]
 	path = roles/geerlingguy.nodejs
 	url = https://github.com/geerlingguy/ansible-role-nodejs
+[submodule "roles/kewlfft.aur"]
+	path = roles/kewlfft.aur
+	url = https://github.com/kewlfft/ansible-aur
