feat: use role to install `fish-shell`

--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,7 @@
     ansible_python_interpreter: "/usr/bin/env python3"
   roles:
     - dotfiles
+    - fish-shell
     - eclipse
     - common
     - tfswitch
