--- a/files/terminator/.config/terminator/config
+++ b/files/terminator/.config/terminator/config
@@ -1,7 +1,19 @@
 [global_config]
-  title_font = Lucida Grande Medium 9
   title_use_system_font = False
+  title_font = Lucida Grande Medium 9
 [keybindings]
+[profiles]
+  [[default]]
+    background_color = "#282828"
+    cursor_color = "#f7f7f7"
+    font = Consolas 9
+    foreground_color = "#f7f7f7"
+    show_titlebar = False
+    scrollback_lines = 99999
+    palette = "#000000:#c75646:#83b33b:#d0b03c:#72b3cc:#c8a0d1:#218693:#b0b0b0:#5d5d5d:#e09690:#cdee69:#ffe377:#9cd9f0:#fbb1f9:#77dfd8:#f7f7f7"
+    use_custom_command = True
+    custom_command = 'bash -i -c "exec fish"'
+    use_system_font = False
 [layouts]
   [[default]]
     [[[child1]]]
@@ -11,16 +23,3 @@
       parent = ""
       type = Window
 [plugins]
-[profiles]
-  [[default]]
-    background_color = "#282828"
-    background_image = None
-    custom_command = 'bash -i -c "exec fish"'
-    font = Consolas 9
-    foreground_color = "#f7f7f7"
-    palette = "#000000:#c75646:#83b33b:#d0b03c:#72b3cc:#c8a0d1:#218693:#b0b0b0:#5d5d5d:#e09690:#cdee69:#ffe377:#9cd9f0:#fbb1f9:#77dfd8:#f7f7f7"
-    scroll_on_output = False
-    scrollback_lines = 99999
-    show_titlebar = False
-    use_custom_command = True
-    use_system_font = False
