--- a/files/fontconfig/.config/fontconfig/fonts.conf
+++ b/files/fontconfig/.config/fontconfig/fonts.conf
@@ -3,9 +3,34 @@
 <fontconfig>
 
   <match target="font">
+    <edit name="rgba" mode="assign">
+      <const>rgb</const>
+    </edit>
+    <edit name="hinting" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="antialias" mode="assign">
+      <bool>true</bool>
+    </edit>
+    <edit name="hintstyle" mode="assign">
+      <const>hintslight</const>
+    </edit>
+    <edit name="lcdfilter" mode="assign">
+      <const>lcddefault</const>
+    </edit>
     <edit name="embeddedbitmap" mode="assign">
       <bool>false</bool>
     </edit>
   </match>
+
+  <alias>
+    <family>sans-serif</family>
+    <prefer>
+      <family>Lucida Grande</family>
+    </prefer>
+  </alias>
 
 </fontconfig>
