--- a/files/fontconfig/.config/fontconfig/fonts.conf
+++ b/files/fontconfig/.config/fontconfig/fonts.conf
@@ -33,4 +33,10 @@
     </prefer>
   </alias>
 
+  <alias>
+    <family>monospace</family>
+    <prefer>
+      <family>Consolas</family>
+    </prefer>
+  </alias>
 </fontconfig>
