fix: avoid extracting over existing `eclispe/`

--- a/roles/eclipse/tasks/main.yml
+++ b/roles/eclipse/tasks/main.yml
@@ -21,6 +21,7 @@
   unarchive:
     src: "{{ destination_archive }}"
     dest: "{{ destination_unpacked }}"
+    creates: "{{ destination_unpacked }}/eclipse"
 
 - name: Create a symbolic link
   file:
