--- a/site.yml
+++ b/site.yml
@@ -4,6 +4,7 @@
     ansible_python_interpreter: "/usr/bin/env python3"
   roles:
     - dotfiles
+    - cron
     - fish-shell
     - eclipse
     - common
