--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "roles/elliotweiser.osx-command-line-tools"]
-	path = roles/elliotweiser.osx-command-line-tools
+	path = ansible/roles/elliotweiser.osx-command-line-tools
 	url = https://github.com/elliotweiser/ansible-osx-command-line-tools
 [submodule "roles/geerlingguy.homebrew"]
-	path = roles/geerlingguy.homebrew
+	path = ansible/roles/geerlingguy.homebrew
 	url = https://github.com/geerlingguy/ansible-role-homebrew
 [submodule "roles/geerlingguy.nodejs"]
-	path = roles/geerlingguy.nodejs
+	path = ansible/roles/geerlingguy.nodejs
 	url = https://github.com/geerlingguy/ansible-role-nodejs
 [submodule "roles/kewlfft.aur"]
-	path = roles/kewlfft.aur
+	path = ansible/roles/kewlfft.aur
 	url = https://github.com/kewlfft/ansible-aur
