--- a/files/vscode/.config/Code/User/settings.json
+++ b/files/vscode/.config/Code/User/settings.json
@@ -21,5 +21,5 @@
   "java.jdt.ls.vmargs": "-XX:+UseParallelGC -XX:GCTimeRatio=4 -XX:AdaptiveSizePolicyWeight=90 -Dsun.zip.disableMemoryMapping=true -Xmx1G -Xms100m -javaagent:\"/home/alex/.vscode/extensions/gabrielbb.vscode-lombok-1.0.1/server/lombok.jar\"",
   "explorer.confirmDragAndDrop": false,
   "java.semanticHighlighting.enabled": true,
-  "java.configuration.checkProjectSettingsExclusions": false,
+  "java.configuration.checkProjectSettingsExclusions": false
 }
