--- a/ansible/roles/common/tasks/setup-Debian.yml
+++ b/ansible/roles/common/tasks/setup-Debian.yml
@@ -1,21 +1,21 @@
 - name: GPG public keys
   apt_key:
-    url: "{{ item }}"
+    url: '{{ item }}'
     state: present
   with_items:
-    - "https://download.docker.com/linux/ubuntu/gpg"
-    - "https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/master/pub.gpg"
+    - 'https://download.docker.com/linux/ubuntu/gpg'
+    - 'https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/master/pub.gpg'
   become: yes
 
 - name: APT repositories
   apt_repository:
-    repo: "{{ item }}"
+    repo: '{{ item }}'
     state: present
   with_items:
-    - "ppa:no1wantdthisname/ppa"
-    - "ppa:rvm/smplayer"
-    - "deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable"
-    - "deb https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/repos/debs/ vscodium main"
+    - 'ppa:no1wantdthisname/ppa'
+    - 'ppa:rvm/smplayer'
+    - 'deb [arch=amd64] https://download.docker.com/linux/ubuntu {{ ansible_distribution_release }} stable'
+    - 'deb https://gitlab.com/paulcarroty/vscodium-deb-rpm-repo/raw/repos/debs/ vscodium main'
   become: yes
 
 - name: Common packages
