--- a/ansible/roles/dotfiles/tasks/main.yml
+++ b/ansible/roles/dotfiles/tasks/main.yml
@@ -1,4 +1,4 @@
-- include_tasks: "setup-{{ ansible_os_family }}.yml"
+- include_tasks: 'setup-{{ ansible_os_family }}.yml'
 
 - name: Symlink my dotfiles
   shell: |
