--- a/ansible/roles/eclipse/defaults/main.yml
+++ b/ansible/roles/eclipse/defaults/main.yml
@@ -1,11 +1,11 @@
-filename_no_extension: "eclipse-java-{{ package_version }}-R-linux-gtk-x86_64"
+filename_no_extension: 'eclipse-java-{{ package_version }}-R-linux-gtk-x86_64'
 package_version: 2020-12
-filename_yes_extension: "{{ filename_no_extension }}.tar.gz"
+filename_yes_extension: '{{ filename_no_extension }}.tar.gz'
 
-source_url: "http://mirror.umd.edu/eclipse/technology/epp/downloads/release/{{ package_version }}/R/{{ filename_yes_extension }}"
-source_checksum: "sha512:1d5aac59454d35175c6b388674d23de91f45d953141389d82b5557d46de92beb2b14396427bfab8f6b198ed58bed67094755d26d3d379c92733f2a74d51b02bd"
+source_url: 'http://mirror.umd.edu/eclipse/technology/epp/downloads/release/{{ package_version }}/R/{{ filename_yes_extension }}'
+source_checksum: 'sha512:1d5aac59454d35175c6b388674d23de91f45d953141389d82b5557d46de92beb2b14396427bfab8f6b198ed58bed67094755d26d3d379c92733f2a74d51b02bd'
 
 destination_parent_dir: "{{ lookup('env','HOME') }}/.local/opt"
-destination_unpacked: "{{ destination_parent_dir }}/{{ filename_no_extension }}"
-destination_archive: "{{ destination_unpacked }}/{{ filename_yes_extension }}"
-destination_link: "{{ destination_parent_dir }}/eclipse"
+destination_unpacked: '{{ destination_parent_dir }}/{{ filename_no_extension }}'
+destination_archive: '{{ destination_unpacked }}/{{ filename_yes_extension }}'
+destination_link: '{{ destination_parent_dir }}/eclipse'
