--- a/.github/workflows/auto-format.yml
+++ b/.github/workflows/auto-format.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1.4.4
         with:
-          node-version: "14.x"
+          node-version: '14.x'
       - name: Install dependencies
         run: yarn install
       - name: Configure git
@@ -24,10 +24,12 @@ jobs:
         run: |
           git ls-files '**.yml' '**.yaml' '**.json' '**.md' '**.xml' -z | xargs -0 yarn run prettier --write
       # Cannot modify .github/workflows (refusing to allow a GitHub App to create or update workflow)
+      - name: Ignore github .github/workflows
+        run: |
+          git checkout .github/workflows
       - name: Commit changes (prettier)
         run: |
           git add -u
-          git reset .github/workflows
           git commit -m 'style: `prettier --write`' || true
       - name: Push changes
         run: |
