--- a/ansible/roles/common/tasks/setup-Archlinux.yml
+++ b/ansible/roles/common/tasks/setup-Archlinux.yml
@@ -18,3 +18,10 @@
       - jdk11-openjdk
     state: present
   become: yes
+
+- name: Enable and/or start docker
+  service:
+    name: docker
+    enabled: yes
+    state: started
+  become: yes
