--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -10,3 +10,5 @@
     - eclipse
     - common
     - tfswitch
+    - role: 'hacks-eluktronics-thinn15'
+      when: ansible_system_vendor == 'Eluktronics' and ansible_product_name == 'THINN-15'
