chore(git): ignore unrelated files from `vscodium`

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # Application data files
 files/maven/.m2/repository/
 files/maven/.m2/wrapper/
+files/vscodium/.config/VSCodium/
 
 # Ansible
 *.retry
