--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [dev-packages]
-ansible = "~=2.9.0"
 
 [pipenv]
 allow_prereleases = true
+
+[packages]
+ansible = "*"
