--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -10,5 +10,6 @@
     - eclipse
     - common
     - tfswitch
+    - pulumi
     - role: 'hacks-eluktronics-thinn15'
       when: ansible_system_vendor == 'Eluktronics' and ansible_product_name == 'THINN-15'
