--- a/files/nano/.nanorc
+++ b/files/nano/.nanorc
@@ -1,2 +1,9 @@
 bind M-B prevword main
 bind M-F nextword main
+
+include /usr/share/nano/html.nanorc
+include /usr/share/nano/javascript.nanorc
+include /usr/share/nano/java.nanorc
+include /usr/share/nano/json.nanorc
+include /usr/share/nano/sh.nanorc
+include /usr/share/nano/yaml.nanorc
