--- a/files/fontconfig/.config/fontconfig/fonts.conf
+++ b/files/fontconfig/.config/fontconfig/fonts.conf
@@ -22,7 +22,8 @@
       <const>lcddefault</const>
     </edit>
     <edit name="embeddedbitmap" mode="assign">
-      <bool>false</bool>
+      <!-- must be true for emojis -->
+      <bool>true</bool>
     </edit>
   </match>
 
