--- a/files/fontconfig/.config/fontconfig/fonts.conf
+++ b/files/fontconfig/.config/fontconfig/fonts.conf
@@ -27,6 +27,15 @@
     </edit>
   </match>
 
+  <match target="font">
+    <test qual="any" name="family">
+      <string>Calibri</string>
+    </test>
+    <edit name="embeddedbitmap" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
+
   <alias>
     <family>sans-serif</family>
     <prefer>
