feat: install `keepassxc` and `syncthing`

--- a/ansible/roles/common/tasks/setup-Archlinux.yml
+++ b/ansible/roles/common/tasks/setup-Archlinux.yml
@@ -18,6 +18,8 @@
       - terminator
       - docker
       - docker-compose
+      - keepassxc
+      - syncthing
       - unp
       - yay
       - yarn
