feat(fontconfig): add fallbacks for monospace

--- a/files/fontconfig/.config/fontconfig/fonts.conf
+++ b/files/fontconfig/.config/fontconfig/fonts.conf
@@ -47,6 +47,8 @@
     <family>monospace</family>
     <prefer>
       <family>Consolas</family>
+      <family>Cascadia Code</family>
+      <family>Noto Sans Mono</family>
     </prefer>
   </alias>
 </fontconfig>
