--- a/files/vscode/.config/Code/User/settings.json
+++ b/files/vscode/.config/Code/User/settings.json
@@ -1,12 +1,13 @@
 {
   "telemetry.telemetryLevel": "off",
 
-  "editor.fontSize": 15,
-  "editor.fontFamily": "'Cascadia Code', 'Noto Sans Mono', 'monospace'",
+  "editor.bracketPairColorization.enabled": false,
+  "editor.fontFamily": "'Cascadia Mono', 'Noto Sans Mono', 'monospace'",
+  "editor.fontSize": 13,
   "editor.fontWeight": "350",
 
   "terminal.integrated.fontSize": 15,
-  "terminal.integrated.fontFamily": "'Cascadia Code', 'Noto Mono', 'monospace'",
+  "terminal.integrated.fontFamily": "'Cascadia Mono', 'Noto Mono', 'monospace'",
   "terminal.integrated.fontWeight": "350",
 
   "editor.rulers": [80, 100],
