feat(ansible/roles/common): replace `terminator` with `kitty`

--- a/ansible/roles/common/tasks/setup-Archlinux.yml
+++ b/ansible/roles/common/tasks/setup-Archlinux.yml
@@ -14,9 +14,9 @@
       - git
       - p7zip
       - gitg
+      - kitty
       - mpv
       - nodejs-lts-gallium
-      - terminator
       - docker
       - docker-compose
       - keepassxc
