feat(kitty): add margin

--- a/files/kitty/.config/kitty/kitty.conf
+++ b/files/kitty/.config/kitty/kitty.conf
@@ -6,6 +6,9 @@ map ctrl+page_up previous_tab
 
 font_size 11
 
+window_padding_width 4
+
+tab_bar_margin_width 4
 tab_bar_edge top
 tab_bar_min_tabs 1
 
