feat(kitty): change style for active tab

--- a/files/kitty/.config/kitty/kitty.conf
+++ b/files/kitty/.config/kitty/kitty.conf
@@ -12,6 +12,8 @@ tab_bar_margin_width 4
 tab_bar_edge top
 tab_bar_min_tabs 1
 
+active_tab_font_style bold
+
 # BEGIN_KITTY_THEME
 # Modus Operandi
 include current-theme.conf
