--- a/files/kitty/.config/kitty/kitty.conf
+++ b/files/kitty/.config/kitty/kitty.conf
@@ -14,6 +14,8 @@ tab_bar_min_tabs 1
 
 active_tab_font_style bold
 
+update_check_interval 0
+
 # BEGIN_KITTY_THEME
 # Modus Operandi
 include current-theme.conf
