feat(ansible/roles/common): install `JetBrains Mono` font

--- a/ansible/roles/common/tasks/setup-Archlinux.yml
+++ b/ansible/roles/common/tasks/setup-Archlinux.yml
@@ -32,6 +32,7 @@
       - yarn
       - jdk11-openjdk
       # Fonts
+      - ttf-jetbrains-mono
       - ttf-nerd-fonts-symbols-2048-em-mono
       - otf-cascadia-code
     state: present
