--- a/files/fontconfig/.config/fontconfig/fonts.conf
+++ b/files/fontconfig/.config/fontconfig/fonts.conf
@@ -47,7 +47,7 @@
     <family>monospace</family>
     <prefer>
       <family>Consolas</family>
-      <family>Cascadia Code</family>
+      <family>Cascadia Mono</family>
       <family>Noto Sans Mono</family>
     </prefer>
   </alias>
