--- a/files/fontconfig/.config/fontconfig/fonts.conf
+++ b/files/fontconfig/.config/fontconfig/fonts.conf
@@ -47,6 +47,7 @@
     <family>monospace</family>
     <prefer>
       <family>Consolas</family>
+      <family>JetBrains Mono</family>
       <family>Cascadia Mono</family>
       <family>Noto Sans Mono</family>
     </prefer>
