--- a/files/kitty/.config/kitty/kitty.conf
+++ b/files/kitty/.config/kitty/kitty.conf
@@ -3,6 +3,10 @@ shell bash -i -c "exec fish"
 map ctrl+shift+t new_tab_with_cwd
 map ctrl+page_down next_tab
 map ctrl+page_up previous_tab
+map ctrl+shift+page_down move_tab_forward
+map ctrl+shift+page_up move_tab_backward
+map shift+page_down scroll_page_down
+map shift+page_up scroll_page_up
 
 font_size 11
 
