--- a/files/nano/.nanorc
+++ b/files/nano/.nanorc
@@ -6,4 +6,5 @@ include /usr/share/nano/javascript.nanorc
 include /usr/share/nano/java.nanorc
 include /usr/share/nano/json.nanorc
 include /usr/share/nano/sh.nanorc
+include /usr/share/nano/xml.nanorc
 include /usr/share/nano/yaml.nanorc
