--- a/files/kitty/.config/kitty/current-theme.conf
+++ b/files/kitty/.config/kitty/current-theme.conf
@@ -1,60 +1,21 @@
-# vim:ft=kitty
-
-## name: Modus Operandi
-## author: Protesilaos Stavrou
-## license: GNU GPLv3
-## blurb: Highly accessible themes made for GNU Emacs, conforming with the highest
-## standard for colour contrast between background and foreground values (WCAG AAA)
-
-# The basic colors
-foreground              #000000
-background              #ffffff
-selection_foreground    #000000
-selection_background    #bcbcbc
-
-# Cursor colors
-cursor                  #000000
-cursor_text_color       #ffffff
-
-# kitty window border colors
-active_border_color     #5317ac
-inactive_border_color   #595959
-
-# Tab bar colors
-active_tab_foreground   #ffffff
-active_tab_background   #000000
-inactive_tab_foreground #bfbfbf
-inactive_tab_background #595959
-
-# The basic 16 colors
-# black
+background #ffffff
+foreground #262626
+cursor #6fd2fc
+selection_background #6fd2fc
 color0 #000000
-color8 #595959
-
-# red
-color1 #a60000
-color9 #972500
-
-# green
-color2  #005e00
-color10 #315b00
-
-# yellow
-color3  #813e00
-color11 #70480f
-
-# blue
-color4  #0031a9
-color12 #2544bb
-
-# magenta
-color5  #721045
-color13 #5317ac
-
-# cyan
-color6  #00538b
-color14 #005a5f
-
-# white
-color7  #bfbfbf
-color15 #ffffff
+color8 #545753
+color1 #f72729
+color9 #fb0416
+color2 #32895c
+color10 #2cc631
+color3 #f96f1c
+color11 #fcd627
+color4 #125ccf
+color12 #156ffe
+color5 #9f00bc
+color13 #e800b0
+color6 #32c2c0
+color14 #39d5ce
+color7 #b2b2b2
+color15 #ededec
+selection_foreground #ffffff
