feat(kitty): disable font ligatures

--- a/files/kitty/.config/kitty/kitty.conf
+++ b/files/kitty/.config/kitty/kitty.conf
@@ -10,6 +10,13 @@ map shift+page_up scroll_page_up
 
 font_size 11
 
+#font_family JetBrains Mono
+#font_family FiraCode Nerd Font Mono
+#font_family Sauce Code Pro Medium Nerd Font Complete Mono
+#font_family Iosevka Term Nerd Font Complete Mono
+
+disable_ligatures always
+
 window_padding_width 4
 
 tab_bar_margin_width 4
