--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -1,7 +1,7 @@
 - hosts: localhost
   connection: local
   vars:
-    ansible_python_interpreter: '/usr/bin/env python3'
+#    ansible_python_interpreter: '/usr/bin/env python3'
   roles:
     - dotfiles
     - fonts
