feat!: replace `barrier` with `input-leap`

--- a/ansible/roles/common/tasks/setup-Archlinux.yml
+++ b/ansible/roles/common/tasks/setup-Archlinux.yml
@@ -12,7 +12,7 @@
       - chromium
       - firefox-developer-edition
       # General
-      - barrier
+      - input-leap
       - keepassxc
       - p7zip
       - unp
