feat: install `easyeffects`

--- a/ansible/roles/common/tasks/setup-Archlinux.yml
+++ b/ansible/roles/common/tasks/setup-Archlinux.yml
@@ -13,6 +13,7 @@
       - chromium
       - firefox-developer-edition
       # General
+      - easyeffects
       - input-leap
       - keepassxc
       - p7zip
