--- a/ansible/roles/common/tasks/setup-Archlinux.yml
+++ b/ansible/roles/common/tasks/setup-Archlinux.yml
@@ -14,7 +14,7 @@
       - firefox-developer-edition
       # General
       - easyeffects
-      - input-leap
+      - deskflow
       - keepassxc
       - p7zip
       - unp
